@@ -100,16 +100,22 @@ public class AesEncryptController {
   @FXML
   void wrongValueField(TextField textField, int multiple, String typeField) {
     int bytesTextFieldLen = textField.getText().getBytes(StandardCharsets.UTF_8).length;
+    Boolean additional;
+    if (multiple == 2)
+      additional = !isHex(textField.getText());
+    else
+      additional = false;
     Boolean verifyKey = !(bytesTextFieldLen == 16 * multiple || bytesTextFieldLen == 24 * multiple
         || bytesTextFieldLen == 32 * multiple);
     Boolean verifyIv = !(bytesTextFieldLen == 16 * multiple);
+
     if (typeField.equals("KEY")) {
-      if (verifyKey)
+      if (verifyKey || additional) {
         textField.setStyle("-fx-background-color: #ffc1c1ff");
-      else
+      } else
         textField.setStyle("-fx-background-color: #ffffffff");
     } else {
-      if (verifyIv)
+      if (verifyIv || additional)
         textField.setStyle("-fx-background-color: #ffc1c1ff");
       else
         textField.setStyle("-fx-background-color: #ffffffff");
@@ -120,8 +126,10 @@ public class AesEncryptController {
   void wrongKeyField(KeyEvent event) {
     if (keyFormatComboBox.getValue().equalsIgnoreCase("UTF-8"))
       wrongValueField(keyField, 1, "KEY");
-    else
+    else {
       wrongValueField(keyField, 2, "KEY");
+      System.out.println(isHex(keyField.getText()));
+    }
   }
 
   @FXML
@@ -154,39 +162,45 @@ public class AesEncryptController {
     if (getKeyFormatSelected().equals("UTF-8")) {
       if (!(byteskeyLen == 16 || byteskeyLen == 24 || byteskeyLen == 32))
         return false;
+      else
+        return true;
     } else {
-      if (!(byteskeyLen == 32 || byteskeyLen == 48 || byteskeyLen == 64))
+      if (!(byteskeyLen == 32 || byteskeyLen == 48 || byteskeyLen == 64) || !isHex(keyField.getText()))
+        return false;
+      else
         return true;
     }
-    return null;
   }
 
   @FXML
   Boolean validIvField() {
     int bytesIvLen = ivField.getText().getBytes(StandardCharsets.UTF_8).length;
     if (getIvParameterFormatSelected().equals("UTF-8")) {
-      if (!(bytesIvLen >= 16)) {
+      if (!(bytesIvLen == 16)) {
+        return false;
+      } else {
         return true;
       }
     } else {
-      if (!(bytesIvLen >= 32)) {
+      if (!(bytesIvLen == 32) || !isHex(ivField.getText())) {
         return false;
-      }
+      } else
+        return true;
     }
-    return null;
   }
 
   @FXML
-  Boolean isHex(String s) {
+  boolean isHex(String s) {
     if (s == null)
       return false;
     s = s.trim();
     if (s.startsWith("0x") || s.startsWith("0X"))
       s = s.substring(2);
-    s.replaceAll("[\\s:-]", "");
-
+    s = s.replaceAll("[\\s:-]", "");
+    if (s.isEmpty())
+      return false;
     try {
-      HexFormat.of().parseHex(s);
+      java.util.HexFormat.of().parseHex(s);
       return true;
     } catch (IllegalArgumentException ex) {
       return false;
@@ -202,14 +216,13 @@ public class AesEncryptController {
     if (comma >= 0 && t.substring(0, comma).toLowerCase().contains("base64")) {
       t = t.substring(comma + 1);
     }
-    t = t.replaceAll("\\s+", ""); // remove quebras/espacos
+    t = t.replaceAll("\\s+", "");
     if (t.isEmpty())
       return false;
-    if (t.length() % 4 != 0)
-      return false; // tipicamente múltiplo de 4
-    // proteção mínima contra inputs grandes demais
     if (t.length() > 10 * 1024 * 1024)
-      return false; // 10 MB
+      return false; // proteção contra OOM
+
+    // Tentar decoder — aceita Standard e URL-safe
     try {
       java.util.Base64.getDecoder().decode(t);
       return true;
@@ -225,17 +238,17 @@ public class AesEncryptController {
 
   @FXML
   Boolean validFileFormat() throws IOException {
-    String fileContent = Files.readString(filePathSelected);
-    if (inputFormatComboBox.getValue().equalsIgnoreCase(("HEX"))) {
-      if (!isHex(fileContent))
-        return false;
-      else
-        return true;
+    if (filePathSelected == null)
+      return false;
+    String fileContent = new String(Files.readAllBytes(filePathSelected), java.nio.charset.StandardCharsets.US_ASCII);
+    String inputFormat = inputFormatComboBox == null ? null : inputFormatComboBox.getValue();
+    if (inputFormat == null)
+      return false;
+
+    if (inputFormat.equalsIgnoreCase("HEX")) {
+      return isHex(fileContent);
     } else {
-      if (!isBase64(fileContent))
-        return false;
-      else
-        return true;
+      return isBase64(fileContent);
     }
   }
 
@@ -244,36 +257,47 @@ public class AesEncryptController {
     Alert alert = new Alert(AlertType.ERROR);
     alert.setTitle(title);
     alert.setContentText(content);
+    alert.showAndWait();
+
   }
 
   void validAllInputs() throws IOException {
-    if (!validFileFormat()) {
-      alertGenerate("Formato de entrada inválido",
-          "Verifique se você selecionou corretamente o formato de entrada.\nFormatos suportados: Hexadecimal e Base64");
-    }
-    if (!validIvField()) {
-      alertGenerate("IV inválido",
-          "O vetor de inicialização (IV) tem tamanho inválido. Para AES utilize 16 bytes (128 bits). Verifique o valor fornecido.");
-    }
-    if (!validKeyField()) {
-      alertGenerate("Tamanho de chave inválido",
-          "O tamanho da chave é inválido. O AES aceita 128, 192 ou 256 bits (16, 24 ou 32 bytes). Verifique o tamanho informado."
-
-      );
+    try {
+      if (!validFileFormat()) {
+        alertGenerate("Formato de entrada inválido",
+            "Verifique se você selecionou corretamente o formato de entrada.\nFormatos suportados: Hexadecimal e Base64");
+        throw new IllegalArgumentException("Invalid File Format");
+      }
+      if (!validKeyField()) {
+        alertGenerate("Tamanho de chave inválido",
+            "O tamanho da chave é inválido. O AES aceita 128, 192 ou 256 bits (16, 24 ou 32 bytes). Verifique o tamanho informado.");
+        throw new IllegalArgumentException("Invalid key");
+      }
+      if (!validIvField()) {
+        alertGenerate("IV inválido",
+            "O vetor de inicialização (IV) tem tamanho inválido. Para AES utilize 16 bytes (128 bits). Verifique o valor fornecido.");
+        throw new IllegalArgumentException("Iv Parameter Invalid");
+      }
+    } catch (NullPointerException e) {
+      alertGenerate("Arquivo não selecionado", "Selecione um arquivo");
     }
   }
 
   @FXML
   void handleSelectFile(ActionEvent event) {
-    FileChooser fileChooser = new FileChooser();
-    fileChooser.setTitle("Selecione o Arquivo para Fazer a Encriptação");
-
-    Window stage = selectFileButton.getScene().getWindow();
-    File selectedFile = fileChooser.showOpenDialog(stage);
     try {
+      FileChooser fileChooser = new FileChooser();
+      fileChooser.setTitle("Selecione o Arquivo para Fazer a Encriptação");
+      Window stage = selectFileButton.getScene().getWindow();
+      File selectedFile = fileChooser.showOpenDialog(stage);
+      if (selectedFile == null)
+        return;
       filePathField.setText(selectedFile.getAbsolutePath());
       filePathSelected = Paths.get(selectedFile.getAbsolutePath());
     } catch (Exception e) {
+      Alert alert = new Alert(AlertType.ERROR);
+      alert.setTitle("Arquivo não selecionado");
+      alert.setContentText("Selecione um arquivo para continuar");
       System.out.println(e);
     }
   }
@@ -292,19 +316,39 @@ public class AesEncryptController {
   }
 
   @FXML
-  void encryptionFile() throws IOException {
-    MyFile file = new MyFile(filePathSelected);
+  void encryptionFile() throws Exception {
     try {
-      Aes aes = new Aes(keyField.getText().getBytes("UTF-8"), ivField.getText().getBytes("UTF-8"), "CBC");
+      Aes aes;
+      validAllInputs();
+      MyFile file = new MyFile(filePathSelected);
+      if (getKeyFormatSelected().equals("HEX")) {
+        if (getModeEncryptFormatSelected().equals("CBC"))
+          aes = new Aes(HexFormat.of().parseHex(keyField.getText()),
+              HexFormat.of().parseHex(ivField.getText()), getModeEncryptFormatSelected());
+        else
+          aes = new Aes(HexFormat.of().parseHex(keyField.getText()), getModeEncryptFormatSelected());
+      } else {
+        if (getModeEncryptFormatSelected().equals("CBC"))
+          aes = new Aes(HexFormat.of().parseHex(keyField.getText()),
+              keyField.getText().getBytes(StandardCharsets.UTF_8), getModeEncryptFormatSelected());
+        else
+          aes = new Aes(keyField.getText().getBytes(StandardCharsets.UTF_8), getModeEncryptFormatSelected());
+      }
       MyFile encryptFile = new MyFile(aes.encypt(file.getContent()));
       selectSavePathCryptoFile();
-      Files.writeString(filePathSave, encryptFile.getHexEncode());
-
-    } catch (Exception e) {
+      if (getOutputFormatSelected().equalsIgnoreCase("HEX")) {
+        Files.writeString(filePathSave, encryptFile.getHexEncode());
+        Alert alert = new Alert(AlertType.INFORMATION);
+        alert.setContentText("Arquivo salvo com sucesso");
+        alert.showAndWait();
+      } else {
+        Files.writeString(filePathSave, encryptFile.getBase64Encode());
+        Alert alert = new Alert(AlertType.INFORMATION);
+        alert.setContentText("Arquivo salvo com sucesso");
+        alert.showAndWait();
+      }
+    } catch (IllegalArgumentException e) {
       System.out.println(e);
-      Alert alert = new Alert(AlertType.ERROR);
-      alert.setTitle("ERRO");
-      alert.setContentText("Tamanho de Chave ou de Parâmetro inválido");
     }
 
   }
